# usb_protocol

./: CMakeLists.txt  README.md  usb_test.c
include/: mech_usb_protocol.h
include/actions/: usb_actions.h
include/parser/: msg_types.h  usb_flags.h  usb_parse.h
include/subtopics/: motor.h  power.h  system.h
src/actions/: usb_actions.c
src/parser/: usb_flags.c  usb_parse.c
util/: byte.h
